--- a/{{cookiecutter.repo_name}}/.travis.yml
+++ b/{{cookiecutter.repo_name}}/.travis.yml
@@ -1,16 +1,16 @@
-language: python
-python:
-#  - "2.6"
-  - "2.7"
-#  - "3.2"
-#  - "3.3"
-#  - "3.4"
-#
-# Command to install dependencies:
+language: C
+
 install:
-#  - pip install -r requirements.txt
-  - source setup/setup.sh
-#
-# Command to run tests:
+  - CHANNEL=http://eupsforge.net/conda/dev ./setup/install.sh lsst-sims nose pandas
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - source eups-setups.sh
+  - setup lsst_sims
+  - eups declare -r . {{cookiecutter.repo_name}} -t current
+  - setup {{cookiecutter.repo_name}}
+
+cache:
+  directories:
+  - $HOME/miniconda.tarball
+
 script:
   - nosetests
