--- a/{{cookiecutter.repo_name}}/ups/{{cookiecutter.repo_name}}.cfg
+++ b/{{cookiecutter.repo_name}}/ups/{{cookiecutter.repo_name}}.cfg
@@ -3,8 +3,8 @@
 import lsst.sconsUtils
 
 dependencies = {
-    "required" : ["pex_exceptions", "utils"],
-    "buildRequired" : ["swig"],
+    "required" : [],
+    "buildRequired" : [],
 }
 
 config = lsst.sconsUtils.Configuration(
